@@ -1,5 +1,10 @@
 2011-01-25  Michael Wiegand <michael.wiegand@greenbone.net>
 
+	* doc/CMakeLists.txt: New. Added missing file required to build
+	documentation.
+
+2011-01-25  Michael Wiegand <michael.wiegand@greenbone.net>
+
 	* nasl/CMakeList.txt: Fix linking of nasl libraries with other parts
 	of openvas-libraries to fix build issue with newer cmake versions.
 
